force-app/main/default/objects/Compliance_Item__c/Compliance_Item__c.object-meta.xml
<CustomObject>
    <label>Compliance Item</label>
    <pluralLabel>Compliance Items</pluralLabel>
    <nameField>
        <label>Name</label>
        <type>AutoNumber</type>
        <displayFormat>CRI-{000000}</displayFormat>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
    <description>Individual compliance requirement items within a compliance report</description>
</CustomObject>