force-app/main/default/objects/Compliance_Item__c/fields/Compliance_Report__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Report__c</fullName>
    <label>Compliance Report</label>
    <type>MasterDetail</type>
    <referenceTo>Compliance_Report__c</referenceTo>
    <relationshipName>Compliance_Items</relationshipName>
</CustomField>