force-app/main/default/objects/Compliance_Item__c/fields/Evidence__c.field-meta.xml
<CustomField>
    <fullName>Evidence__c</fullName>
    <label>Evidence</label>
    <type>LongTextArea</type>
    <length>131072</length>
</CustomField>