force-app/main/default/objects/Compliance_Item__c/fields/Requirement__c.field-meta.xml
<CustomField>
    <fullName>Requirement__c</fullName>
    <label>Requirement</label>
    <type>Text</type>
    <length>255</length>
</CustomField>