force-app/main/default/objects/Compliance_Item__c/fields/Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Reviewer__c</fullName>
    <label>Reviewer</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipName>Reviewed_Compliance_Items</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>