force-app/main/default/objects/Compliance_Item__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Pass</fullName><default>false</default><label>Pass</label></value>
            <value><fullName>Fail</fullName><default>false</default><label>Fail</label></value>
            <value><fullName>NA</fullName><default>false</default><label>NA</label></value>
            <value><fullName>ManualReview</fullName><default>false</default><label>ManualReview</label></value>
            <value><fullName>Pending</fullName><default>false</default><label>Pending</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>